# tsp-tinker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  tsp_types.rs
src/generate/: euclidean.rs  mod.rs  random.rs
src/solve/: branch_n_bound.rs  lin_kernighan.rs  mod.rs  naive_heuristic.rs  utils.rs
src/types/: helpers.rs  mod.rs  serialization.rs  struct_functionality.rs
