[package]
name = "tsp-tinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.8"
rayon = "1.10"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
